Bug 819609:  Don't try to send too-large videos to hardware video decoders. r=doublec a=blocking-basecamp